# intellectual-capital

./: CHANGELOG.md  README.md  intellectual-capital.cabal
src/: IntellectualCapital.hs
src/IntellectualCapital/: API.hs
